--- a/deep-learning.html
+++ b/deep-learning.html
@@ -100,7 +100,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://plumerai.workable.com/j/F458D0F2CD'>Plumerai - Jobs: Deep Learning Engineer - Apply online</a></h5> 
+<h5><a href='https://plumerai.workable.com/j/F458D0F2CD'>Plumerai - Jobs: Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Apply online for the job of Deep Learning Engineer at Plumerai.</p>
 <hr/>
@@ -155,7 +155,7 @@ Architect - WWFO | US, CA, Santa Clara ? Solution Architect - WWFO | US, CA,?...
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/a/jobs/1758571'>Job Application for  Deep Learning Engineer at A? by Airbus</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/a/jobs/1758571'>Job Application for  Deep Learning Engineer at A? by Airbus</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -330,7 +330,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4286159002'>Job Application for Deep Learning or ML Research Engineer at Iris Automation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4286159002'>Job Application for Deep Learning or ML Research Engineer at Iris Automation</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
@@ -356,13 +356,13 @@ source and research community is a fundamental part of your role. Competitive?..
 <p>4 days ago ... We're looking for firmware engineers to build the future of hearing instruments 
 and take on significant leadership and responsibility at a fast-growing startup.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_university/job/San-Jose/Deep-Learning-Research-Intern_75223'>Deep Learning Research Intern</a></h5> 
+<h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_university/job/San-Jose/Deep-Learning-Research-Intern_75223'>Deep Learning Research Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Job Description. Position summary: We are seeking computer vision and deep 
 learning students to conduct new research in one of several project areas. 
 Project?...</p>
 <hr/>
-<h5><a href='https://deepcure.workable.com/j/51A001A451'>DeepCure - Jobs: Deep Learning Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deepcure.workable.com/j/51A001A451'>DeepCure - Jobs: Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Deep Learning Engineer at DeepCure.</p>
 <hr/>
@@ -370,7 +370,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-01</p>
 <hr/>
-<h5><a href='https://saicusa.workable.com/j/4930916B14'>SAIC Innovation Center - Jobs: Machine Learning Engineer (Deep learning) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://saicusa.workable.com/j/4930916B14'>SAIC Innovation Center - Jobs: Machine Learning Engineer (Deep learning) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-01</p>
 <hr/>
@@ -382,7 +382,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hermes-microvision.workable.com/j/FD61D7F374'>Hermes-Microvision - Jobs: Machine Learning/Deep Learning Engineer - Apply online</a></h5> 
+<h5><a href='https://hermes-microvision.workable.com/j/FD61D7F374'>Hermes-Microvision - Jobs: Machine Learning/Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -430,7 +430,7 @@ Project?...</p>
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://www.datarobot.com/careers/job/1598066/'>Deep Learning Engineer, Core Modeling in Boston | Open position | DataRobot</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1598066/'>Deep Learning Engineer, Core Modeling in Boston | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
@@ -454,7 +454,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://www.datarobot.com/careers/job/1615743/'>Deep Learning Engineer, Core Modeling in Singapore | Open position | DataRobot</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1615743/'>Deep Learning Engineer, Core Modeling in Singapore | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
