ADARA - Principal Engineer, Data Architect. Business Intelligence Database Architect - Career Page. Spry Squared, Inc. Big Data Architect | SmartRecruiters. Customer Data Scientist / Solution Architect (US/Paris/Munich) - h2o.ai - Career Page. Big Data Architect (Kafka) - Experian Careers. Big Data Architect - Apply ... - Hummingbird Technologies Ltd - Jobs. Capgemini Japan Careers - Big Data Architect (Data Lake Architect). IT Data Domain Architect - Bank of Hawaii Careers. Data Architect, Decision Analytics Services ... - EXL Service | Careers. Medidata Solutions Careers - Senior Enterprise Architect. Sr.Software Engineer-Big Data, Cloud Architecture -21835 #0224 job at Radiant Digital in Temple Terrace, FL, powered by JobScore. Unusual Ventures - Senior Data Warehouse Architect.  Amplifon Careers - Global IT Data Architect. Datatonic - Jobs: Cloud Architect (GCP) - Apply online. Lead Data Architect | Kalos Consulting, Inc.. Hummingbird Technologies Ltd - Jobs: Big Data Architect - Apply .... Verifone Careers - Bigdata Architect. Diverse Lynx LLC Windows Data Center Architect Administrator | SmartRecruiters. Dataiku - Hadoop Architect EMEA. Big Data Technical Architect - Mumbai - Careers. Bmtech group Data Architect | SmartRecruiters. Datastrong Careers - Data Architect. Data Architect (SZ) - Klook - Career Page. Job Application for Data Architecture Engineer at Blue Apron. Sr Data Architect, Cloud in United States, United States | Careers at .... Nortal - Data Architect. ServiceNow Careers - Principal Database Architect. Quast Ltd - Jobs: Data Architect - Apply online. Centare - Data Architect. IT Pros Health Care Data Architect  ($130K-$160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters. Data/Technical Architect-Contingent Worker-21458 #0193 job at Radiant Digital in Irving, TX, powered by JobScore. Data Architect - RELX Careers. Technical Data Architect - Experian Careers. Software Engineer Database/Data Architect (11259) 

--- a/data-architect.html
+++ b/data-architect.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999692385100-big-data-architect'>Spry Squared, Inc. Big Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999692385100-big-data-architect'>Spry Squared, Inc. Big Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -66,7 +66,7 @@ This is a great opportunity for someone who specializes in Kafka...</p>
 <p>Jul 18, 2019 ... You will join a talented team of software engineers, big data engineers, computer 
 vision experts and machine learning researchers, and are expected to get up?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/capgemini-japan/job/op0DafwW'>Capgemini Japan Careers - Big Data Architect (Data Lake Architect)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/capgemini-japan/job/op0DafwW'>Capgemini Japan Careers - Big Data Architect (Data Lake Architect)</a></h5> 
 <p><span class="badge badge-light">Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -92,7 +92,7 @@ Jose, California. Review all of the job details and apply today!</p>
 <p>Jul 17, 2019 ... Senior Data Warehouse Architect. San Francisco, California. Wonderschool. Full 
 Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/amplifon-pt/job/odvCafwe'> Amplifon Careers - Global IT Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/amplifon-pt/job/odvCafwe'> Amplifon Careers - Global IT Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -100,7 +100,7 @@ Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/kalos/job/6q3si9n36wyxyjzrik9xbmczwr'>Lead Data Architect | Kalos Consulting, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/kalos/job/6q3si9n36wyxyjzrik9xbmczwr'>Lead Data Architect | Kalos Consulting, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -109,7 +109,7 @@ Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <p>4 days ago ... You will join a talented team of software engineers, big data engineers, computer 
 vision experts and machine learning researchers, and are expected to get up?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/verifone/job/oK8aafwW'>Verifone Careers - Bigdata Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/verifone/job/oK8aafwW'>Verifone Careers - Bigdata Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... About Connect ? Payment Services ? Estate Management ? Verifone Marketplace ? 
 Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.</p>
@@ -122,7 +122,7 @@ Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://huron.avature.net/careers/JobDetail/Big-Data-Technical-Architect-Mumbai/5788'>Big Data Technical Architect - Mumbai - Careers</a></h5> 
+<h5><a href='https://huron.avature.net/careers/JobDetail/Big-Data-Technical-Architect-Mumbai/5788'>Big Data Technical Architect - Mumbai - Careers</a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -162,7 +162,7 @@ applications?...</p>
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/centare/f5c0d61d-16e9-4068-a11b-8347673e8f10'>Centare - Data Architect</a></h5> 
+<h5><a href='https://jobs.lever.co/centare/f5c0d61d-16e9-4068-a11b-8347673e8f10'>Centare - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... We are looking to add a Data Architect to our team here at Centare. In this newly 
 created role, you will be responsible for building the foundation of our?...</p>
@@ -192,7 +192,7 @@ high performing applications using NOSQL DB and BigData...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CoreTechsInc/743999691589440-master-data-management-mdm-architect'>CoreTechs Inc. Master Data Management (MDM) Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CoreTechsInc/743999691589440-master-data-management-mdm-architect'>CoreTechs Inc. Master Data Management (MDM) Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -208,7 +208,7 @@ high performing applications using NOSQL DB and BigData...</p>
 <p><span class="badge badge-light">Hilversum, Netherlands</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/endo-pharma/job/ojsmafw1'>Endo Pharmaceuticals Inc. Careers - Senior Data Center Operations Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/endo-pharma/job/ojsmafw1'>Endo Pharmaceuticals Inc. Careers - Senior Data Center Operations Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -226,7 +226,7 @@ best?...</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/conviva/job/oaqV9fwo'>Conviva Careers - Principal Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/conviva/job/oaqV9fwo'>Conviva Careers - Principal Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -347,7 +347,7 @@ object-oriented programming experience to join our IT team as a Data Architect?.
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ParallelPartners1/743999691379370-data-architect'>Parallel Partners Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ParallelPartners1/743999691379370-data-architect'>Parallel Partners Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -359,7 +359,7 @@ object-oriented programming experience to join our IT team as a Data Architect?.
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/data-architect-75361'>Data Architect - Johnson Controls Careers</a></h5> 
+<h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/data-architect-75361'>Data Architect - Johnson Controls Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 26, 2019 ... Data and Machine Learning Scientist. United States of America, Illinois, Chicago. 
 Engineering. Requisition #: WD30072470142. Sr. Software Engineer.</p>
@@ -423,7 +423,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<h5><a href='https://mitre.referrals.selectminds.com/jobs/lead-sigint-data-science-and-analytics-architect-6234'>Lead SIGINT Data Science and Analytics Architect - MITRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/lead-sigint-data-science-and-analytics-architect-6234'>Lead SIGINT Data Science and Analytics Architect - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 20, 2019 ... Lead Cyber Security System Engineer. Annapolis ... Lead/Principal Cyber 
 Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...</p>
